PHP based CRUD application with file upload

--- a/css/style.css
+++ b/css/style.css
@@ -316,11 +316,12 @@ p {
 
 .hero-image {
   position: absolute;
-  right: 0;
-  top: 50%;
+  right: 35px;
+  top: 55%;
   transform: translateY(-50%);
   width: 50%;
   max-width: 600px;
+  /* z-index: 999; */
 }
 
 /* Features Section */
@@ -463,7 +464,7 @@ p {
   gap: 0.5rem;
 }
 
-.dot {
+.slider-dot {
   width: 12px;
   height: 12px;
   border-radius: 50%;
@@ -472,9 +473,10 @@ p {
   transition: var(--transition);
 }
 
-.dot.active {
+.slider-dot.active {
   background-color: var(--primary-color);
 }
+
 
 /* Footer */
 .footer {
@@ -2391,3 +2393,6 @@ input[type="password"]:focus {
 [data-theme="dark"] input[type="password"]:focus {
   background-color: var(--input-bg);
 }
+
+
+
